test/tests/diagnostics/syntax_err05/jastadd.err.expected
Problems during JRAG parsing:
Error at tests/diagnostics/syntax_err05/Test.jrag:4:19: unexpected token "int":
  syn int A.v() = int;
                  ^^^
